<resources>
    <string name="app_name">EZ Pass</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="type">Type:</string>
    <string name="ticket_no">Ticket No:</string>
    <string name="time_out">Time out:</string>
    <string name="time_in">Time in:</string>
    <string name="time_use">Time used:</string>
    <string name="submit">Submit</string>
    <string name="submit_print">Submit/Print</string>
    <string name="back">Back</string>
    <string name="check_out_detail">Checkout Detail</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="pay_by_case">Pay By Cash</string>
    <string name="online_pay">Pay Online</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number_and_password_to_make_sure_it_s_you">Enter your phone number and password to make sure it\'s you</string>

    <string name="oops">Oops…!</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="connection_time_out">Connection time out!</string>
    <string name="no_connection_hint">No internet found. Check your connection or try again.</string>
    <string name="untrusted_certificate">Untrusted Certificate</string>
    <string name="connection_refused">Connection refused</string>
    <string name="ssl_handshake_aborted">The Server has closed the connection</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid phone number</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="lot_type">Lot Type</string>
    <string name="version">Version</string>
    <string name="confirm_to_sign_out">Do you want to sign out?</string>
    <string name="no">No</string>
    <string name="yes_f">Yes</string>
    <string name="payment_success">Your payment successfully.</string>
    <string name="scan_qr">Scan QR</string>
    <string name="eazy_parking">Eazy Parking</string>
    <string name="select_language">Select Language</string>
    <string name="khmer">Khmer</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="receipt">Print Receipt</string>
    <string name="home">Home</string>
    <string name="eazy_partner_solution_co_ltd">EAZY Partner Solution Co., Ltd</string>
    <string name="search_ticket_no">Search</string>
    <string name="enter_ticket_no">Enter ticket no</string>
    <string name="please_enter_ticket_no_that_have_in_ticket_to_preview_check_out">Please enter ticket no that have in ticket to preview to check out detail.</string>
    <string name="please_confirm_pay_by_case">Please confirm for pay by case!</string>

</resources>