<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout"
    android:background="@drawable/card_view_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/changeLangLayout">

            <TextView
                android:id="@+id/titleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_ticket_no"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey_"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_ticket_no_that_have_in_ticket_to_preview_check_out"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:id="@+id/layout"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_ticket_no">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/BodyTextStyle"
                        android:id="@+id/ticketNoEdt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:id="@+id/txtCancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:elevation="1dp"
                    android:padding="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:textColor="@color/white"
                    android:background="@drawable/card_view_card"
                    android:backgroundTint="@color/colorGPASAccent"
                    android:layout_marginBottom="10dp"
                    tools:ignore="RtlCompat"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/txtOk"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/card_view_card"
                    android:backgroundTint="@color/light_gray"
                    android:clickable="true"
                    android:elevation="1dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/yes_f"
                    android:enabled="false"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/loading_view"
            layout="@layout/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>