<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/appBar_ui"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="5dp"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar_layout"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar_ui">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <View
                    android:id="@+id/app_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--input   field-->
                <TextView
                    android:id="@+id/message_text_view"
                    style="@style/BodyTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/input_field_linear_layout"
                    android:text="@string/enter_your_phone_number_and_password_to_make_sure_it_s_you"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.104"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_logo" />

                <LinearLayout
                    android:id="@+id/input_field_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/message_text_view">

                    <!--new password-->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_number_tf_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/BodyTextStyle"
                            android:id="@+id/phone_number_tf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="10" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_tf_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:layout_marginTop="10dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/BodyTextStyle"
                            android:id="@+id/password_tf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberPassword"
                            android:maxLength="10" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/action_login_mtb"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="35dp"
                        android:minHeight="60dp"
                        android:text="@string/log_in"
                        app:strokeColor="@color/colorPrimaryDark"
                        android:textAllCaps="true" />

                    <!--input   field-->
                    <TextView
                        android:id="@+id/versionTv"
                        style="@style/BodyTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.104"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_layout"
        android:visibility="gone" />

</RelativeLayout>