<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_grey_"
    tools:context=".ui.checkout.CheckoutDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/appBarLayout"
            layout="@layout/app_bar_layout"/>

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="200dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/image_car"
                            android:layout_width="match_parent"
                            android:scaleType="center"
                            android:layout_height="match_parent"
                            android:src="@drawable/car"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eazy_parking"
                        android:textSize="20sp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginHorizontal="30dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="3dp">
                        <TextView
                            android:id="@+id/label_ticket_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ticket_no"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/ticket_no"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/label_time_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_in"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/time_in_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/label_time_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_out"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/time_out_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <!--    time use-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="3dp">

                        <TextView
                            android:id="@+id/label_time_use"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time_use"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/time_use_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="N/A"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:layout_marginHorizontal="40dp"
                        android:gravity="center"
                        android:background="@drawable/round_outline_color_red_drawable">

                        <TextView
                            android:id="@+id/text_amout_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:text="0.0"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:layout_marginBottom="50dp"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/select_payment_method"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">
                        <LinearLayout
                            android:layout_gravity="bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/card_view_card"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_margin="10dp">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/action_pay_by_case_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                style="@style/ButtonStyle"
                                android:text="@string/pay_by_case"
                                android:textColor="@color/white"
                                app:strokeColor="@color/colorSecondaryPrimary"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_gravity="bottom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/card_view_card"
                            android:backgroundTint="@color/colorPrimary"
                            android:layout_margin="10dp">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/action_online_pay_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/ButtonStyle"
                                android:text="@string/online_pay"
                                android:textColor="@color/white"
                                app:strokeColor="@color/colorSecondaryPrimary"/>

                        </LinearLayout>

<!--                        <LinearLayout-->
<!--                            android:id="@+id/action_pay_case_btn"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="@drawable/shape_error"-->
<!--                            android:backgroundTint="@color/colorPrimary"-->
<!--                            android:foreground="?android:attr/selectableItemBackground"-->
<!--                            android:padding="10dp">-->

<!--                            <TextView-->
<!--                                android:id="@+id/txtCase"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:layout_gravity="center"-->
<!--                                android:text="@string/pay_by_case"-->
<!--                                android:textColor="@color/black" />-->

<!--                        </LinearLayout>-->

<!--                        <LinearLayout-->
<!--                            android:id="@+id/action_online_pay_btn"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginHorizontal="10dp"-->
<!--                            android:background="@drawable/shape_error"-->
<!--                            android:backgroundTint="@color/light_gray"-->
<!--                            android:foreground="?android:attr/selectableItemBackground"-->
<!--                            android:padding="10dp">-->

<!--                            <TextView-->
<!--                                android:id="@+id/txtOnline"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="wrap_content"-->
<!--                                android:layout_gravity="center"-->
<!--                                android:paddingHorizontal="10dp"-->
<!--                                android:text="@string/online_pay"-->
<!--                                android:textColor="@color/dark_gray" />-->

<!--                        </LinearLayout>-->


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_view_card"
            android:backgroundTint="@color/colorPrimary"
            android:visibility="gone"
            android:layout_margin="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:strokeColor="@color/colorSecondaryPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/loading_view"
        layout="@layout/loading_layout"
        android:visibility="gone" />

</RelativeLayout>